# pulse

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  rustfmt.toml  tailwind.config.js
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEV_WORKFLOWS.md  PROJECT_OVERVIEW.md  SECURITY.md
e2e/: fixtures.ts  messaging.spec.ts  messaging_stability.spec.ts  onboarding.spec.ts  presence.spec.ts  presence_sync.spec.ts  websocket.spec.ts
public/sounds/: README.md
pulse-server/: Cargo.toml
pulse-server/src/: connection.rs  lib.rs  main.rs  messages.rs  state.rs
pulse-server/tests/: e2e_test.rs  integration_test.rs  security_tests.rs
scripts/: dev-client.ps1  generate-ico.mjs  generate-icons.mjs  local-test.ps1
src/: App.tsx  FRONTEND_GUIDE.md  index.css  main.tsx
src-tauri/: BACKEND_GUIDE.md  Cargo.toml  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  websocket.rs
src-tauri/src/commands/: chat.rs  message.rs  mod.rs  turn.rs  url_preview.rs  user.rs  websocket.rs
src-tauri/src/crypto/: manager.rs  mod.rs  storage.rs  types.rs
src-tauri/src/models/: chat.rs  input.rs  message.rs  mod.rs  url_preview.rs  user.rs
src-tauri/src/utils/: helpers.rs  mod.rs  validation.rs
src-tauri/src/websocket/: client.rs  handlers.rs  messages.rs  mod.rs  server.rs
src/components/call/: CallErrorModal.tsx  CallOverlay.tsx  DeviceSelectionModal.tsx  IncomingCallModal.tsx
src/components/chat/: ChatHeader.tsx  DateDivider.tsx  EmojiPicker.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  MessageStatus.tsx  TypingIndicator.tsx  UrlPreviewCard.tsx
src/components/chat-list/: ChatListItem.tsx
src/components/common/: Avatar.tsx
src/components/layout/: AppLayout.tsx  ChatList.tsx  ChatWindow.tsx  Sidebar.tsx  Titlebar.tsx
src/components/modals/: NetworkModal.tsx  NewChatModal.tsx  OnboardingModal.tsx  ProfileModal.tsx  UpdateModal.tsx
src/components/panels/: ContactInfoPanel.tsx
src/components/ui/: CountrySelector.tsx
src/context/: WebSocketContext.tsx
src/data/: countries.ts
src/hooks/: useCSSVariable.ts  useCrypto.ts  useWebSocket.ts
src/services/: callService.ts  chatService.ts  cryptoService.ts  index.ts  messageService.ts  turnService.ts  updaterService.ts  userService.ts  websocketService.ts
src/store/: callStore.ts  chatStore.ts  messageStore.ts  uiStore.ts  userStore.ts
src/types/: index.ts
src/utils/: formatTime.ts
