[package]
name = "pulse-server"
version = "0.1.0"
description = "Central WebSocket relay server for Pulse"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
