[package]
name = "pulse"
version = "0.1.0"
description = "A WhatsApp-like chat application"
authors = ["you"]
edition = "2021"

[lib]
name = "pulse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# LAN Networking
local-ip-address = "0.6"

# E2E Encryption (X25519 + AES-256-GCM)
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# OS Keyring for secure key storage
keyring = "3"

# Input validation
garde = { version = "0.22", features = ["derive"] }

# URL Preview
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
regex = "1"
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-fs = "2.4.5"

# Auto-updater (desktop only)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
